# gep3

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
src/ccid/: __init__.py  bulk_in_messages.py  bulk_message.py  bulk_out_messages.py  descriptors.py  pyusb.py
src/common/: ber.py  binary.py  bitstr.py  hstr.py  intlist.py  iso7816.py  parserc.py  str.py  test_bitstr.py  test_hstr.py  test_str.py
src/crypto/: des.py  modes.py  test_des.py
src/emv/: __init__.py  commands.py  data.py  dsc.py  key_management.py  records.py
src/examples/: emv_key_derivation.py  evc_cvc3.py  evc_dcvv.py
src/globalplatform/: __init__.py  commands.py  encodings.py  key_management.py  scp02.py
src/gp/: __init__.py  commands.py  encodings.py
src/iso7816/: __init__.py  apdu.py  commands.py  encodings.py
src/multos/: __init__.py  commands.py  encodings.py
src/pcsc/: card.py  emv.py  gp.py  ml.py  scard.py
src/pyusb/: __init__.py  apdu_exchange.py  emv_exchange.py  gp.py  gp_exchange.py  ifd.py  messages_exchange.py
src/pyusbccid/: __init__.py  apdu_exchange.py  ccid_exchange.py  emv_exchange.py  gp_exchange.py  ifd.py
src/shell/: main.py
src/tests/: test_common_ber.py  test_crypto_des.py
tests/: ber_test.py  bitstr_test.py  des_test.py  dsc_test.py  hstr_test.py  intlist_test.py  key_management_test.py  records_test.py  str_test.py
