[metadata]
name = gep3
version = 0.4.3
author = Sebastien Pochic
author_email = spochic@gmail.com
description = Generic Encryption Peripheral: various utilities related to cryptography and smart cards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spochic/gep3
project_urls =
    Bug Tracker = https://github.com/spochic/gep3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Security :: Cryptography
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Smart Card

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires = parsec

[options.packages.find]
where = src